# UsagiInit

./: .gitignore  .version  CMakeLists.txt  Dockerfile  Init.c  LICENSE
.github/workflows/: azure-devops-backup.yml  docker-image-release.yml  docker-image.yml  scheduled-version-update.yml
include/: globals.h  guardian.h  logger.h  phase.h  services.h  signals.h  types.h
include/shell/: command.h  executor.h  parser.h  prompt.h  types.h  utils.h
scripts/: build.sh  format.sh  release_static.sh
src/: gVariables.c  globals.c  guardian.c  logger.c  main.c  phase.c  services.c  signals.c  tmp.c
src/shell/: command.c  executor.c  parser.c  prompt.c  utils.c
tst/: run.sh
tst/integration/: run.sh
tst/integration/env-var-expansion/: UsagiInit.sh  expected.txt  run.sh
tst/integration/reinitialize-on-all-service-termination/: UsagiInit.sh  expected.txt  run.sh
tst/integration/reinitialize-on-all-service-termination/resources/: terminatingService.sh
tst/integration/restart-failed-service/: UsagiInit.sh  expected.txt  run.sh
tst/integration/restart-failed-service/resources/: unhappyService.sh
